[tool.poetry]
name = "gumby"
version = "0.6.0"
description = "Stretch polygonal meshes in segments along an axis"
authors = ["Paul Melnikow <github@paulmelnikow.com>", "Metabolize and other contributors"]
license = "MIT"
include = ["CHANGELOG.md"]
repository = "https://github.com/lace/gumby"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4"
click = "^8.0.3"
numpy = "*"
lacecore = {version = ">=3.0.0a0", extras = ["obj"]}
meshlab-pickedpoints = ">=3.0,<5.0"
pyyaml = "*"

[tool.poetry.dev-dependencies]
black = "22.10.0"
click = "8.1.3"
coverage = "6.3.2"
executor = "23.2"
flake8 = "6.0.0"
flake8-import-order = "0.18.2"
lxml = "4.9.1"
pytest = "7.2.2"
pytest-cov = "4.0.0"
twine = "4.0.2"

[build-system]
# Lint requires setuptools.
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
